--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>myTestPage</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>For perfomance review</h1>
     <img src="scale_1200.jpg" alt="рисунок QA" width="600" />
+    <p></p>
     <h2>Agile манифест</h2>
-    
-    <p>Манифест- это документ, который описывает идеи, ценности и принципы методолии</p>
+    <p><strong>Манифест</strong>- это документ, который описывает идеи, ценности и принципы методолии</p>
 
-   <p>В манифесте 12 принципов:</p>
+
+   <h3>В манифесте 12 принципов:</h3>
 
     <ol> <!-- changed to list in the tutorial -->
       <li>Наивысшим приоритетом признается удовлетворение заказчика за счет ранней и бесперебойной поставки ценного программного обеспечения;</li>
@@ -28,7 +31,7 @@
       <li>Команда регулярно обдумывает способы повышения своей эффективности и соответственно корректирует рабочий процесс.</li>
     </ol>
 
-    <p>Из принципов выделяют 4 ценности:</p>
+    <h3>Из принципов выделяют 4 ценности:</h3>
 
    <ul> <!-- changed to list in the tutorial -->
       <li>люди и взаимодействие важнее процессов и инструментов;</li>
@@ -40,6 +43,7 @@
     <p>Read the <a href="https://agilemanifesto.org/iso/ru/manifesto.html">Agile Manifest</a></p>
   </body>
 </html>
+
 
 
 
