--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <h3>Из принципов выделяют 4 ценности:</h3>
 
    <ul> <!-- changed to list in the tutorial -->
-      <li>люди и взаимодействие важнее процессов и инструментов;</li>
-      <li>работающий продукт важнее исчерпывающей документации;</li>
-      <li>сотрудничество с заказчиком важнее согласования условий контракта;</li>
-      <li>готовность к изменениям важнее следования первоначальному плану.</li>
+      <li>Люди и взаимодействие важнее процессов и инструментов;</li>
+      <li>Работающий продукт важнее исчерпывающей документации;</li>
+      <li>Сотрудничество с заказчиком важнее согласования условий контракта;</li>
+      <li>Готовность к изменениям важнее следования первоначальному плану.</li>
    </ul>
 
     <p>Read the <a href="https://agilemanifesto.org/iso/ru/manifesto.html">Agile Manifest</a></p>
