--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>myTestPage</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="preload" href="fonts/myfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   </head>
   <body>
     <h1>For perfomance review</h1>
-    <img src="scale_1200.jpg" alt="рисунок QA" width="600" />
+    <img src="scale_1200.jpg" alt="рисунок QA" width="600" height="1000" />
     <p></p>
     <h2>Agile манифест</h2>
     <p><strong>Манифест</strong>- это документ, который описывает идеи, ценности и принципы методолии</p>
@@ -16,7 +17,7 @@
 
    <h3>В манифесте 12 принципов:</h3>
 
-    <ol> <!-- changed to list in the tutorial -->
+    <ol><!-- changed to list in the tutorial -->
       <li>Наивысшим приоритетом признается удовлетворение заказчика за счет ранней и бесперебойной поставки ценного программного обеспечения;</li>
       <li>Изменение требований приветствуется даже в конце разработки (это может повысить конкурентоспособность полученного продукта);</li>
       <li>Частая поставка работающего программного обеспечения (каждые пару недель или пару месяцев с предпочтением меньшего периода);</li>
@@ -33,7 +34,7 @@
 
     <h3>Из принципов выделяют 4 ценности:</h3>
 
-   <ul> <!-- changed to list in the tutorial -->
+   <ul><!-- changed to list in the tutorial -->
       <li>люди и взаимодействие важнее процессов и инструментов;</li>
       <li>работающий продукт важнее исчерпывающей документации;</li>
       <li>сотрудничество с заказчиком важнее согласования условий контракта;</li>
